--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   </head>
 
   <body>
-    <header>
+    <header id="header">
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a href="./index.html">Studio</a></li>
+          <li><a href="./portolio.html">Portfolio</a></li>
+          <li><a href="#header">Contacts</a></li>
         </ul>
       </nav>
       <address>
