add index page css

--- a/portolio.html
+++ b/portolio.html
@@ -5,26 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <!-- Normalize page -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <!-- Add google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body>
     <header id="header">
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./portolio.html">Portfolio</a></li>
-          <li><a href="#header">Contacts</a></li>
+      <nav class="menu-nav">
+        <a href="./index.html" class="logo-text">
+          <span class="span-logo">Web</span>Studio</a
+        >
+        <ul class="menu-nav-list">
+          <li>
+            <a href="./index.html" class="nav-text text-medium">Studio</a>
+          </li>
+          <li>
+            <a href="./portolio.html" class="nav-text text-medium">Portfolio</a>
+          </li>
+          <li><a href="#header" class="nav-text text-medium">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="address-text"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="address-text"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -33,12 +56,18 @@
       <section id="Filters">
         <h2 hidden>Filters</h2>
         <nav>
-          <ul>
-            <button type="button">All</button>
-            <button type="button">Web Site</button>
-            <button type="button">App</button>
-            <button type="button">Design</button>
-            <button type="button">Marketing</button>
+          <ul class="filter-list">
+            <button class="filter-button text-button" type="button">All</button>
+            <button class="filter-button text-button" type="button">
+              Web Site
+            </button>
+            <button class="filter-button text-button" type="button">App</button>
+            <button class="filter-button text-button" type="button">
+              Design
+            </button>
+            <button class="filter-button text-button" type="button">
+              Marketing
+            </button>
           </ul>
         </nav>
       </section>
@@ -46,17 +75,25 @@
         <h2 hidden>Row1</h2>
         <ul>
           <li>
-            <img src="./images/HW02-1-1-BankingApp.jpg" alt="BankingApp" />
+            <img
+              src="./images/HW02-1-1-BankingApp.jpg"
+              alt="BankingApp"
+              width="360"
+            />
             <h3>Banking App Interface Concept</h3>
             <p>App</p>
           </li>
           <li>
-            <img src="./images/HW02-1-2-Payment.jpg" alt="" />
+            <img src="./images/HW02-1-2-Payment.jpg" alt="" width="360" />
             <h3>Cashless Payment</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/HW02-1-3-Cashless-Payment.jpg" alt="" />
+            <img
+              src="./images/HW02-1-3-Cashless-Payment.jpg"
+              alt=""
+              width="360"
+            />
             <h3>Meditation App</h3>
             <p>App</p>
           </li>
@@ -66,17 +103,17 @@
         <h2 hidden>Row2</h2>
         <ul>
           <li>
-            <img src="./images/HW02-2-1-Taxi.jpg" alt="" />
+            <img src="./images/HW02-2-1-Taxi.jpg" alt="" width="360" />
             <h3>Taxi Service</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/HW02-2-2-Illustrations.jpg" alt="" />
+            <img src="./images/HW02-2-2-Illustrations.jpg" alt="" width="360" />
             <h3>Screen Illustrations</h3>
             <p>Design</p>
           </li>
           <li>
-            <img src="./images/HW02-2-3-Courses.jpg" alt="" />
+            <img src="./images/HW02-2-3-Courses.jpg" alt="" width="360" />
             <h3>Online Courses</h3>
             <p>Marketing</p>
           </li>
@@ -86,17 +123,17 @@
         <h2 hidden>Row3</h2>
         <ul>
           <li>
-            <img src="./images/HW02-3-1-Insta.jpg" alt="" />
+            <img src="./images/HW02-3-1-Insta.jpg" alt="" width="360" />
             <h3>Instagram Stories Concept</h3>
             <p>Design</p>
           </li>
           <li>
-            <img src="./images/HW02-3-2-Food.jpg" alt="" />
+            <img src="./images/HW02-3-2-Food.jpg" alt="" width="360" />
             <h3>Organic Food</h3>
             <p>Web Site</p>
           </li>
           <li>
-            <img src="./images/HW02-3-3-Coffee.jpg" alt="" />
+            <img src="./images/HW02-3-3-Coffee.jpg" alt="" width="360" />
             <h3>Fresh Coffee</h3>
             <p>Web Site</p>
           </li>
@@ -104,7 +141,9 @@
       </section>
     </main>
     <footer id="footer">
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html" class="logo-text">
+        <span class="span-logo">Web</span>Studio</a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
