--- a/index.html
+++ b/index.html
@@ -5,39 +5,63 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <!-- Normalize page -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/style.css" />
+    <!-- Add google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
     <header id="header">
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./portolio.html">Portfolio</a></li>
-          <li><a href="#header">Contacts</a></li>
+      <nav class="menu-nav">
+        <a href="./index.html" class="logo-text">
+          <span class="span-logo">Web</span>Studio</a
+        >
+        <ul class="menu-nav-list">
+          <li>
+            <a href="./index.html" class="nav-text text-medium">Studio</a>
+          </li>
+          <li>
+            <a href="./portolio.html" class="nav-text text-medium">Portfolio</a>
+          </li>
+          <li><a href="#header" class="nav-text text-medium">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="address-text"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="address-text"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
     </header>
 
     <main>
-      <section>
+      <section class="section-solution">
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button class="filter-button text-button" type="button" type="button">
+          Order Service
+        </button>
       </section>
 
       <section>
-        <h2>Section2</h2>
+        <h2 hidden>Section2</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -84,7 +108,7 @@
         </ul>
       </section>
 
-      <section>
+      <section class="section-our-team">
         <h2>Our Team</h2>
         <ul>
           <li>
@@ -111,8 +135,10 @@
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html">WebStudio</a>
+    <footer id="footer">
+      <a href="./index.html" class="logo-text">
+        <span class="span-logo">Web</span>Studio</a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
