--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <main>
       <section class="section-solution">
         <h1>Effective Solutions for Your Business</h1>
-        <button class="filter-button text-button" type="button" type="button">
+        <button class="filter-button text-button" type="button">
           Order Service
         </button>
       </section>
