--- a/portolio.html
+++ b/portolio.html
@@ -57,17 +57,31 @@
         <h2 hidden>Filters</h2>
         <nav>
           <ul class="filter-list">
-            <button class="filter-button text-button" type="button">All</button>
-            <button class="filter-button text-button" type="button">
-              Web Site
-            </button>
-            <button class="filter-button text-button" type="button">App</button>
-            <button class="filter-button text-button" type="button">
-              Design
-            </button>
-            <button class="filter-button text-button" type="button">
-              Marketing
-            </button>
+            <li>
+              <button class="filter-button text-button" type="button">
+                All
+              </button>
+            </li>
+            <li>
+              <button class="filter-button text-button" type="button">
+                Web Site
+              </button>
+            </li>
+            <li>
+              <button class="filter-button text-button" type="button">
+                App
+              </button>
+            </li>
+            <li>
+              <button class="filter-button text-button" type="button">
+                Design
+              </button>
+            </li>
+            <li>
+              <button class="filter-button text-button" type="button">
+                Marketing
+              </button>
+            </li>
           </ul>
         </nav>
       </section>
