--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
             <a href="./index.html" class="nav-text text-medium">Studio</a>
           </li>
           <li>
-            <a href="./portolio.html" class="nav-text text-medium">Portfolio</a>
+            <a href="./portfolio.html" class="nav-text text-medium"
+              >Portfolio</a
+            >
           </li>
           <li><a href="#header" class="nav-text text-medium">Contacts</a></li>
         </ul>
