--- a/portfolio.html
+++ b/portfolio.html
@@ -24,8 +24,8 @@
   <body>
     <header id="header">
       <nav class="menu-nav">
-        <a href="./index.html" class="logo-text">
-          <span class="span-logo">Web</span>Studio</a
+        <a href="./index.html" class="link">
+          Web<span class="span-logo">Studio</span></a
         >
         <ul class="menu-nav-list">
           <li>
@@ -53,7 +53,7 @@
       </address>
     </header>
     <main>
-      <section id="Filters">
+      <section>
         <h2 hidden>Filters</h2>
         <nav>
           <ul class="filter-list">
@@ -84,8 +84,7 @@
             </li>
           </ul>
         </nav>
-      </section>
-      <section class="Row1">
+
         <h2 hidden>Row1</h2>
         <ul>
           <li>
@@ -112,8 +111,7 @@
             <p>App</p>
           </li>
         </ul>
-      </section>
-      <section class="Row2">
+
         <h2 hidden>Row2</h2>
         <ul>
           <li>
@@ -132,8 +130,7 @@
             <p>Marketing</p>
           </li>
         </ul>
-      </section>
-      <section class="Row3">
+
         <h2 hidden>Row3</h2>
         <ul>
           <li>
