--- a/index.html
+++ b/index.html
@@ -23,32 +23,28 @@
   <body>
     <header id="header">
       <nav class="menu-nav">
-        <a href="./index.html" class="logo-text">
-          <span class="span-logo">Web</span>Studio</a
+        <a href="./index.html" class="link logo-text">
+          Web<span class="span-logo">Studio</span></a
         >
-        <ul class="menu-nav-list">
+        <ul class="list">
           <li>
-            <a href="./index.html" class="nav-text text-medium">Studio</a>
+            <a href="./index.html" class="nav-text link">Studio</a>
           </li>
           <li>
-            <a href="./portfolio.html" class="nav-text text-medium"
-              >Portfolio</a
-            >
+            <a href="./portfolio.html" class="nav-text link">Portfolio</a>
           </li>
-          <li><a href="#header" class="nav-text text-medium">Contacts</a></li>
+          <li><a href="" class="nav-text link">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
+        <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="address-text"
+            <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="address-text"
-              >+11 (000) 111-11-11</a
-            >
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -56,7 +52,7 @@
 
     <main>
       <section class="section-solution">
-        <h1>Effective Solutions for Your Business</h1>
+        <h1 class="header-1">Effective Solutions for Your Business</h1>
         <button class="filter-button text-button" type="button">
           Order Service
         </button>
@@ -64,31 +60,31 @@
 
       <section>
         <h2 hidden>Section2</h2>
-        <ul>
+        <ul class="list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="header-3">Strategy</h3>
+            <p class="list-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="header-3">Punctuality</h3>
+            <p class="list-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="header-3">Diligence</h3>
+            <p class="list-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="header-3">Technologies</h3>
+            <p class="list-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -96,8 +92,8 @@
         </ul>
       </section>
       <section>
-        <h2>What are we doing</h2>
-        <ul>
+        <h2 class="header-2">What are we doing</h2>
+        <ul class="list">
           <li>
             <img src="./images/img1.jpg" alt="desktop" width="360" />
           </li>
@@ -111,37 +107,37 @@
       </section>
 
       <section class="section-our-team">
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+        <h2 class="header-2">Our Team</h2>
+        <ul class="list">
+          <li class="our-team-list">
             <img src="./images/img-foto1.jpg" alt="mark" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="header-3">Mark Guerrero</h3>
+            <p class="list-text">Product Designer</p>
           </li>
-          <li>
+          <li class="our-team-list">
             <img src="./images/img-foto2.jpg" alt="tom" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="header-3">Tom Ford</h3>
+            <p class="list-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="our-team-list">
             <img src="./images/img-foto3.jpg" alt="camila" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="header-3">Camila Garcia</h3>
+            <p class="list-text">Marketing</p>
           </li>
-          <li>
+          <li class="our-team-list">
             <img src="./images/img-foto4.jpg" alt="daniel" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="header-3">Daniel Wilson</h3>
+            <p class="list-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer id="footer">
-      <a href="./index.html" class="logo-text">
-        <span class="span-logo">Web</span>Studio</a
-      >
-      <p>
+    <footer id="footer" class="basement">
+      <a href="./index.html" class="link logo-text">
+          Web<span class="footer-span-logo">Studio</span></a
+        >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
