--- a/portfolio.html
+++ b/portfolio.html
@@ -24,39 +24,37 @@
   <body>
     <header id="header">
       <nav class="menu-nav">
-        <a href="./index.html" class="link">
+        <a href="./index.html" class="link logo-text">
           Web<span class="span-logo">Studio</span></a
         >
-        <ul class="menu-nav-list">
+        <ul class="list">
           <li>
-            <a href="./index.html" class="nav-text text-medium">Studio</a>
+            <a href="./index.html" class="nav-text link">Studio</a>
           </li>
           <li>
-            <a href="./portolio.html" class="nav-text text-medium">Portfolio</a>
+            <a href="./portfolio.html" class="nav-text link">Portfolio</a>
           </li>
-          <li><a href="#header" class="nav-text text-medium">Contacts</a></li>
+          <li><a href="" class="nav-text link">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
+      <address class="nav-address">
+        <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="address-text"
+            <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" class="address-text"
-              >+11 (000) 111-11-11</a
-            >
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
     </header>
     <main>
       <section>
-        <h2 hidden>Filters</h2>
+        <h1 hidden>Filters</h1>
         <nav>
-          <ul class="filter-list">
+          <ul class="list">
             <li>
               <button class="filter-button text-button" type="button">
                 All
@@ -85,77 +83,90 @@
           </ul>
         </nav>
 
-        <h2 hidden>Row1</h2>
-        <ul>
+        <ul class="list">
           <li>
-            <img
-              src="./images/HW02-1-1-BankingApp.jpg"
-              alt="BankingApp"
-              width="360"
-            />
-            <h3>Banking App Interface Concept</h3>
-            <p>App</p>
+            <a class="link">
+              <img
+                src="./images/HW02-1-1-BankingApp.jpg"
+                alt="BankingApp"
+                width="360"
+              />
+              <h3 class="head-3">Banking App Interface Concept</h3>
+              <p>App</p>
+            </a>
           </li>
           <li>
-            <img src="./images/HW02-1-2-Payment.jpg" alt="" width="360" />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <a class="link">
+              <img src="./images/HW02-1-2-Payment.jpg" alt="" width="360" />
+              <h3 class="head-3">Cashless Payment</h3>
+              <p>Marketing</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/HW02-1-3-Cashless-Payment.jpg"
-              alt=""
-              width="360"
-            />
-            <h3>Meditation App</h3>
-            <p>App</p>
-          </li>
-        </ul>
-
-        <h2 hidden>Row2</h2>
-        <ul>
-          <li>
-            <img src="./images/HW02-2-1-Taxi.jpg" alt="" width="360" />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <a class="link">
+              <img
+                src="./images/HW02-1-3-Cashless-Payment.jpg"
+                alt=""
+                width="360"
+              />
+              <h3 class="head-3">Meditation App</h3>
+              <p>App</p>
+            </a>
           </li>
           <li>
-            <img src="./images/HW02-2-2-Illustrations.jpg" alt="" width="360" />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <a class="link">
+              <img src="./images/HW02-2-1-Taxi.jpg" alt="" width="360" />
+              <h3 class="head-3">Taxi Service</h3>
+              <p>Marketing</p>
+            </a>
           </li>
           <li>
-            <img src="./images/HW02-2-3-Courses.jpg" alt="" width="360" />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
-          </li>
-        </ul>
-
-        <h2 hidden>Row3</h2>
-        <ul>
-          <li>
-            <img src="./images/HW02-3-1-Insta.jpg" alt="" width="360" />
-            <h3>Instagram Stories Concept</h3>
-            <p>Design</p>
+            <a class="link">
+              <img
+                src="./images/HW02-2-2-Illustrations.jpg"
+                alt=""
+                width="360"
+              />
+              <h3 class="head-3">Screen Illustrations</h3>
+              <p>Design</p>
+            </a>
           </li>
           <li>
-            <img src="./images/HW02-3-2-Food.jpg" alt="" width="360" />
-            <h3>Organic Food</h3>
-            <p>Web Site</p>
+            <a class="link">
+              <img src="./images/HW02-2-3-Courses.jpg" alt="" width="360" />
+              <h3 class="head-3">Online Courses</h3>
+              <p>Marketing</p>
+            </a>
           </li>
           <li>
-            <img src="./images/HW02-3-3-Coffee.jpg" alt="" width="360" />
-            <h3>Fresh Coffee</h3>
-            <p>Web Site</p>
+            <a class="link">
+              <img src="./images/HW02-3-1-Insta.jpg" alt="" width="360" />
+              <h3 class="head-3">Instagram Stories Concept</h3>
+              <p>Design</p>
+            </a>
+          </li>
+          <li>
+            <a class="link">
+              <img src="./images/HW02-3-2-Food.jpg" alt="" width="360" />
+              <h3 class="head-3">Organic Food</h3>
+              <p>Web Site</p>
+            </a>
+          </li>
+          <li>
+            <a class="link">
+              <img src="./images/HW02-3-3-Coffee.jpg" alt="" width="360" />
+              <h3 class="head-3">Fresh Coffee</h3>
+              <p>Web Site</p>
+            </a>
           </li>
         </ul>
       </section>
     </main>
-    <footer id="footer">
-      <a href="./index.html" class="logo-text">
-        <span class="span-logo">Web</span>Studio</a
+    <footer id="footer" class="basement">
+      <a href="./index.html" class="link logo-text">
+        Web<span class="footer-span-logo">Studio</span></a
       >
-      <p>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
