--- a/portfolio.html
+++ b/portfolio.html
@@ -40,12 +40,14 @@
       <address class="nav-address">
         <ul class="list">
           <li>
-            <a class="link" href="mailto:info@devstudio.com"
+            <a class="address-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="address-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -53,35 +55,30 @@
     <main>
       <section>
         <h1 hidden>Filters</h1>
-        
-          <ul class="list">
-            <li>
-              <button class="filter-button text-button" type="button">
-                All
-              </button>
-            </li>
-            <li>
-              <button class="filter-button text-button" type="button">
-                Web Site
-              </button>
-            </li>
-            <li>
-              <button class="filter-button text-button" type="button">
-                App
-              </button>
-            </li>
-            <li>
-              <button class="filter-button text-button" type="button">
-                Design
-              </button>
-            </li>
-            <li>
-              <button class="filter-button text-button" type="button">
-                Marketing
-              </button>
-            </li>
-          </ul>
-        
+
+        <ul class="list">
+          <li>
+            <button class="filter-button text-button" type="button">All</button>
+          </li>
+          <li>
+            <button class="filter-button text-button" type="button">
+              Web Site
+            </button>
+          </li>
+          <li>
+            <button class="filter-button text-button" type="button">App</button>
+          </li>
+          <li>
+            <button class="filter-button text-button" type="button">
+              Design
+            </button>
+          </li>
+          <li>
+            <button class="filter-button text-button" type="button">
+              Marketing
+            </button>
+          </li>
+        </ul>
 
         <ul class="list">
           <li>
@@ -91,72 +88,96 @@
                 alt="BankingApp"
                 width="360"
               />
-              <h2 class="head-3">Banking App Interface Concept</h2>
-              <p>App</p>
+              <h2 class="head3">Banking App Interface Concept</h2>
+              <p class="list-text">App</p>
             </a>
           </li>
           <li>
             <a class="link">
-              <img src="./images/HW02-1-2-Payment.jpg" alt="" width="360" />
-              <h2 class="head-3">Cashless Payment</h2>
-              <p>Marketing</p>
+              <img
+                src="./images/HW02-1-2-Payment.jpg"
+                alt="Cashless Payment"
+                width="360"
+              />
+              <h2 class="head3">Cashless Payment</h2>
+              <p class="list-text">Marketing</p>
             </a>
           </li>
           <li>
             <a class="link">
               <img
                 src="./images/HW02-1-3-Cashless-Payment.jpg"
-                alt=""
+                alt="Meditation App"
                 width="360"
               />
-              <h2 class="head-3">Meditation App</h2>
-              <p>App</p>
+              <h2 class="head3">Meditation App</h2>
+              <p class="list-text">App</p>
             </a>
           </li>
           <li>
             <a class="link">
-              <img src="./images/HW02-2-1-Taxi.jpg" alt="" width="360" />
-              <h2 class="head-3">Taxi Service</h2>
-              <p>Marketing</p>
+              <img
+                src="./images/HW02-2-1-Taxi.jpg"
+                alt="Marketing"
+                width="360"
+              />
+              <h2 class="head3">Taxi Service</h2>
+              <p class="list-text">Marketing</p>
             </a>
           </li>
           <li>
             <a class="link">
               <img
                 src="./images/HW02-2-2-Illustrations.jpg"
-                alt=""
+                alt="Screen Illustrations"
                 width="360"
               />
-              <h2 class="head-3">Screen Illustrations</h2>
-              <p>Design</p>
+              <h2 class="head3">Screen Illustrations</h2>
+              <p class="list-text">Design</p>
             </a>
           </li>
           <li>
             <a class="link">
-              <img src="./images/HW02-2-3-Courses.jpg" alt="" width="360" />
-              <h2 class="head-3">Online Courses</h2>
-              <p>Marketing</p>
+              <img
+                src="./images/HW02-2-3-Courses.jpg"
+                alt="Online Courses"
+                width="360"
+              />
+              <h2 class="head3">Online Courses</h2>
+              <p class="list-text">Marketing</p>
             </a>
           </li>
           <li>
             <a class="link">
-              <img src="./images/HW02-3-1-Insta.jpg" alt="" width="360" />
-              <h2 class="head-3">Instagram Stories Concept</h2>
-              <p>Design</p>
+              <img
+                src="./images/HW02-3-1-Insta.jpg"
+                alt="Instagram Stories"
+                width="360"
+              />
+              <h2 class="head3">Instagram Stories Concept</h2>
+              <p class="list-text">Design</p>
             </a>
           </li>
           <li>
             <a class="link">
-              <img src="./images/HW02-3-2-Food.jpg" alt="" width="360" />
-              <h2 class="head-3">Organic Food</h2>
-              <p>Web Site</p>
+              <img
+                src="./images/HW02-3-2-Food.jpg"
+                alt="Organic Food"
+                width="360"
+              />
+              <h2 class="head3">Organic Food</h2>
+              <p class="list-text">Web Site</p>
             </a>
           </li>
           <li>
             <a class="link">
-              <img src="./images/HW02-3-3-Coffee.jpg" alt="" width="360" />
-              <h2 class="head-3">Fresh Coffee</h2>
-              <p>Web Site</p>
+              <img
+                src="./images/HW02-3-3-Coffee.jpg"
+                alt="Fresh Coffee"
+                width="360"
+              />
+              <h2 class="head3">Fresh Coffee</h2>
+              <p class="list-text">Web Site</p>
             </a>
           </li>
         </ul>
