--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <main>
       <section class="section-solution">
         <h1 class="head1">Effective Solutions for Your Business</h1>
-        <button class="filter-button text-button" type="button">
+        <button class="solution-button text-button" type="button">
           Order Service
         </button>
       </section>
